corruption of Chinese chars.

Added form group as an optional explanation line on labels.

Date of first application added to the InfoBook list fields.

A description line added to printing assessment profile sheets.

Allow limiting students by a choice of subject classes in report
assessments and limit the assessments to a single subject.




Version ClaSS-1.0.8 release (2011/10/17)
-------------------------------------------

Option to BCC email messages to parents with student tutors.

Message explanation line included on the to sender's copy.

Display merit totals for a house on the report_merit page.

Added prefererred forename MarkBook export.

Exposed the otherpn1 and 2 fields in fetchStudent.

Allowed MarkBook export to work without a selected column.

Added a notification message sent out through the eportfolio for
shared comments.

Fix to searching by emailaddress (MATCH was too fuzzy).

Import students now tries to match existing guardians by name or
email address.

Re-wroked reporting incidents to display full table of details with
sorting.

Allow filter by sanction and for reproting incidents.


Version ClaSS-1.0.7 release (2011/10/06)
-------------------------------------------

Allow get_photo functions to use the student's enrolment number.

Added a button to seneeds host page to list all sen students.

Fixed very recent problem with simple search in InfoBook.



Version ClaSS-1.0.6 release (2011/10/05)
-------------------------------------------

The reports are now locked from changes in report_report_list once published.

Correctly handle bounces when using PEAR:Mail.



Version ClaSS-1.0.5 release (2011/10/01)
-------------------------------------------

Updated the InfoBook comments_list to allow for posting of comments to
the eportfolio.

Added a pop-up to list a student's classes and teachers to the student course
element.

The community group page now has a delete option.

Fix to fetchDependents for the very special case of twins.
